fix styles on small screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,5 +7,5 @@
 }
 
 body {
-  overflow-y: hidden;
+  @apply sm:overflow-y-hidden;
 }
